feat: custom scheme and newtab